fixed wrapping for home heading

--- a/public/css/base.desktop.scss
+++ b/public/css/base.desktop.scss
@@ -749,6 +749,7 @@ article > .subhead {
     font-size: 0.8em;
     text-align: center;
     margin: 1.5em 0 0.5em;
+    white-space: inherit;
   }
 }
 
